--- a/auction-service/serverless.yml
+++ b/auction-service/serverless.yml
@@ -28,6 +28,7 @@ functions:
       - http:
           method: POST
           path: /auction
+          authorizer: ${self:custom.authorizer}
   
   getAuctions:
     handler: src/handlers/getAuctions.handler
@@ -35,6 +36,7 @@ functions:
       - http:
           method: GET
           path: /auctions
+          authorizer: ${self:custom.authorizer}
           
   getAuction:
     handler: src/handlers/getAuction.handler
@@ -42,6 +44,7 @@ functions:
       - http:
           method: GET
           path: /auction/{id}
+          authorizer: ${self:custom.authorizer}
 
   placeBid:
     handler: src/handlers/placeBid.handler
@@ -50,6 +53,7 @@ functions:
           method: PATCH
           cors: true
           path: auction/{id}/bid
+          authorizer: ${self:custom.authorizer}
 
   processAuctions:
     handler: src/handlers/processAuctions.handler
@@ -57,6 +61,8 @@ functions:
       - schedule: rate(1 minute)
 
 custom:
+  authorizer: arn:aws:lambda:#{AWS::Region}:#{AWS::AccountId}:function:auth-service-${self:provider.stage}-auth
+
   AuctionsTable:
     name: !Ref AuctionsTable
     arn: !GetAtt AuctionsTable.Arn
