--- a/auction-service/serverless.yml
+++ b/auction-service/serverless.yml
@@ -33,6 +33,7 @@ functions:
     events:
       - http:
           method: POST
+          cors: true
           path: /auction
           authorizer: ${self:custom.authorizer}
   
@@ -41,6 +42,7 @@ functions:
     events:
       - http:
           method: GET
+          cors: true
           path: /auctions
           authorizer: ${self:custom.authorizer}
           
@@ -49,6 +51,7 @@ functions:
     events:
       - http:
           method: GET
+          cors: true
           path: /auction/{id}
           authorizer: ${self:custom.authorizer}
 
@@ -66,6 +69,7 @@ functions:
     events:
       - http:
           method: PATCH
+          cors: true
           path: /auction/{id}/picture
           authorizer: ${self:custom.authorizer}
 
