add set picture on create auction

--- a/auction-service/serverless.yml
+++ b/auction-service/serverless.yml
@@ -44,7 +44,7 @@ functions:
           method: GET
           cors: true
           path: /auctions
-          authorizer: ${self:custom.authorizer}
+          # authorizer: ${self:custom.authorizer}
           
   getAuction:
     handler: src/handlers/getAuction.handler
